gccida/c2/copyprop_hardreg_forward
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2227:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v40; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2347:14: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_operands = recog_data_0.n_operands; 
             ^~~~~~~~~~~~
             recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2370:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand_type[j] = OP_INOUT; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2373:32: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( *v19 >= 0 || v17 == 38 && recog_data_0.operand_type[j] == OP_OUT ) 
                               ^~~~~~~~~~~~
                               recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2384:13: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
kill_value( recog_data_0.operand[v24], v9); 
            ^~~~~~~~~~~~
            recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2395:13: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
kill_value( recog_data_0.operand[v26], v9); 
            ^~~~~~~~~~~~
            recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2404:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
reg = ( rtx)v86[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2417:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v33 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v29] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2418:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v34 = ( ( unsigned int)( mode_class_0[v31] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2455:50: error: use of undeclared identifier 'reg_class'; did you mean 'regclass'?
|| ( oldest_value_reg = find_oldest_value_reg( ( reg_class)*( ( _DWORD *)&regclass_map + rtuint), reg, v9)) == 0LL 
                                                 ^~~~~~~~~
                                                 regclass
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/rtl.h:1970:13: note: 'regclass' declared here
extern void regclass                    PARAMS ((rtx, int, FILE *));
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2455:60: error: invalid operands to binary expression ('void (rtx, int, FILE *)' (aka 'void (struct rtx_def *, int, struct _IO_FILE *)') and 'uint32 *' (aka 'unsigned int *'))
|| ( oldest_value_reg = find_oldest_value_reg( ( reg_class)*( ( _DWORD *)&regclass_map + rtuint), reg, v9)) == 0LL 
                                               ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2467:30: error: use of undeclared identifier 'machine_mode'
v50 = gen_rtx_fmt_i0( REG, ( machine_mode)v30, v52); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2473:21: error: assigning to 'uint32' (aka 'unsigned int') from incompatible type 'struct rtx_def'
*( _DWORD *)&v50[1] = reg[1]; 
                    ^ ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2491:8: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !*recog_data_0.constraints[v35] ) 
       ^~~~~~~~~~~~
       recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2495:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v37 = recog_data_0.operand[v35]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2496:48: error: invalid operands to binary expression ('int' and 'struct rtx_def')
if ( *( _WORD *)v37 == 61 && v37->fld[0].rtint == v37[1] ) 
                             ~~~~~~~~~~~~~~~~~ ^  ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2499:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.operand_type[v35] ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2505:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
fld = recog_data_0.operand_loc[v35]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/regrename.c:2509:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v38 = recog_data_0.operand[v35]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copyprop_hardreg_forward/src/obj/regrename.o] Error 1
